feat: production-ready Farcaster Mini App on Base Sepolia
- Complete cleanup submission flow with enhanced Impact Report form
- Impact Product NFT claiming system (10 progressive levels)
- DCU points rewards system with referral and streak bonuses
- Verifier dashboard for cleanup verification
- IPFS integration for decentralized photo and metadata storage
- Full Base Sepolia testnet deployment with all contracts verified
- Comprehensive README with setup instructions and architecture docs
- Tested in Safari on macOS

Contracts deployed on Base Sepolia:
- ImpactProductNFT: 0x0E5713877D0B3610B58ACB5c13bdA41b61F6a0c9
- RewardDistributor: 0xd77f64024b0Ce2359DCe43ea149c77bF3cf08a40
- VerificationContract: 0x08e9Ad176773ea7558e9C8453191d4361f8225f5

Ready for production deployment.

--- a/contracts/package.json
+++ b/contracts/package.json
@@ -1,23 +1,23 @@
 {
   "name": "decleanup-contracts",
   "version": "1.0.0",
-  "description": "DeCleanup Network Smart Contracts for Celo",
+  "description": "DeCleanup Network Smart Contracts for Base",
   "scripts": {
     "compile": "hardhat compile",
     "test": "hardhat test",
-    "deploy:sepolia": "hardhat run scripts/deploy.js --network sepolia",
-    "deploy:alfajores": "hardhat run scripts/deploy.js --network alfajores",
-    "deploy:celo": "hardhat run scripts/deploy.js --network celo",
-    "setup:sepolia": "hardhat run scripts/setup.js --network sepolia",
-    "setup:alfajores": "hardhat run scripts/setup.js --network alfajores",
-    "setup:celo": "hardhat run scripts/setup.js --network celo",
-    "add-verifier:sepolia": "hardhat run scripts/addVerifier.js --network sepolia",
-    "redeploy:sepolia": "hardhat run scripts/redeploy.js --network sepolia",
-    "redeploy-two:sepolia": "hardhat run scripts/redeployTwo.js --network sepolia"
+    "deploy:baseSepolia": "hardhat run scripts/deploy.js --network baseSepolia",
+    "deploy:base": "hardhat run scripts/deploy.js --network base",
+    "setup:baseSepolia": "hardhat run scripts/setup.js --network baseSepolia",
+    "setup:base": "hardhat run scripts/setup.js --network base",
+    "add-verifier:baseSepolia": "hardhat run scripts/addVerifier.js --network baseSepolia",
+    "redeploy:baseSepolia": "hardhat run scripts/redeploy.js --network baseSepolia",
+    "redeploy-two:baseSepolia": "hardhat run scripts/redeployTwo.js --network baseSepolia"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^4.0.0",
     "@openzeppelin/contracts": "^5.0.0",
+    "@openzeppelin/contracts-upgradeable": "^5.0.0",
+    "@openzeppelin/hardhat-upgrades": "^3.0.0",
     "hardhat": "^2.19.0"
   },
   "dependencies": {
